Fix CSS issue on displays - excessive scrollbars.

--- a/themes/default/css/base.css
+++ b/themes/default/css/base.css
@@ -1278,20 +1278,21 @@ div.hint {
 #summary .heading{
 	font-family: 'DIN-Regular', Helvetica, sans-serif;
 	font-size: 13px;
-	color: #333333;
-	text-transform:uppercase;
+	text-transform: uppercase;
 	text-align: left;
-	width:30%;
-    overflow: scroll;
-	display:inline-block;
-	font-weight:bold;
+	width: 30%;
+    overflow: hidden;
+	display: inline-block;
+	font-weight: bold;
 	color: #666;
+    vertical-align: top;
 }
 #summary .summaryData{
 	width: 70%;
 	display: inline-block;
 	font-family: 'DIN-Regular', Helvetica, sans-serif;
-	color:#333;
+	color: #333;
+    vertical-align: top;
 }
 #summary .thumbnailsImageContainer{
     border:1px solid #DDDDDD;
